src/components/dashboad/dashboard.css
/* feat 4:  */
/* iPhone 6-8: 375 * 667 像素 */

.welcome-info {
  color: #283877;
  font-weight: 600;
  font-size: 2rem;
  margin: 0;
}
@media screen and (min-width: 375px) {
  .dashboard-container {
    height: 40vh;
    overflow-y: scroll;
    padding: 4vh 4vh;
  }
}

@media screen and (min-width: 376px) and (max-width: 414px) {
  /* iPhone 8 Plus, iPhone X */
}

/* haven't to deal with 414~1225 */
/* my screen 1342 * 564 works very well */
@media (min-width: 1125px) {
  /* 在这里添加你的样式规则 */
  .dashboard-container {
    height: 40vh;
    overflow-y: scroll;
    padding: 6vh 8vh;
    margin: 8vh 8vh;
  }

  /* 更多样式规则 */
  /* minimize page offset */
  .welcome-info {
    visibility: hidden;
  }
}

